--- a/03 - Exercícios de JavaScript2/index.html
+++ b/03 - Exercícios de JavaScript2/index.html
@@ -13,7 +13,7 @@
         (a troca de imagens pode ser implementada por meio de um botão)</p>
         <button onclick="alterarImg()">Alterar Imagem</button>
         <br>
-        <img id="imagensGigantes" src="">
+        <img id="imagensGigantes" src="img/inicial.jpg">
     <hr>
 
     <p>2. Desenvolva um formulário Web com dois campos (e-mail, senha) e um botão. 
